--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -112,8 +112,8 @@
     <thead>
       <tr>
         <th>Title</th>
-        <th>Primary color</th>
-        <th>Secondary color</th>
+        <!-- <th>Primary color</th>
+        <th>Secondary color</th> -->
         <th>Starts at</th>
         <th>Ends at</th>
         <th>Remove</th>
@@ -130,20 +130,20 @@
             (keyup)="refresh.next()"
           />
         </td>
-        <td>
-          <!-- <input
+        <!-- <td>
+          <input
             type="color"
             [(ngModel)]="event.color.primary"
             (change)="refresh.next()"
-          /> -->
+          />
         </td>
         <td>
-          <!-- <input
+          <input
             type="color"
             [(ngModel)]="event.color.secondary"
             (change)="refresh.next()"
-          /> -->
-        </td>
+          />
+        </td> -->
         <td>
           <input
             class="form-control"
@@ -184,6 +184,9 @@
   </table>
 </div>
 </div>
+
+<button class="btn btn-primary float-right">Add Data</button>
+
 
 <ng-template #modalContent let-close="close">
   <div class="modal-header">
