--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -8,7 +8,7 @@
 
         <mat-form-field  appearance="outline">
           <mat-label>First Name</mat-label>
-          <input matInput type="text" value="" placeholder="Enter user's FirstName"  formControlName="firstName"/>
+          <input matInput type="text" placeholder="Enter user's FirstName" [value]="ud.firstName"/>
           <mat-error *ngIf="firstName?.errors?.['required']">
             FirstName is required
           </mat-error>
@@ -16,7 +16,7 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Last Name</mat-label>
-          <input matInput type="text" value="" placeholder="Enter user's LastName" formControlName="lastName">
+          <input matInput type="text" placeholder="Enter user's LastName" [value]="ud.lastName"/>
         </mat-form-field><br>
 
         
@@ -24,7 +24,7 @@
        
         <mat-form-field  appearance="outline">
           <mat-label>Personal Email</mat-label>
-          <input matInput type="email" placeholder="Enter user's personal email" formControlName="email"/>
+          <input matInput type="email" placeholder="Enter user's personal email" [value]="ud.email"/>
           <mat-error *ngIf="email?.errors?.['required']">
             Email is required
           </mat-error>
@@ -35,7 +35,6 @@
 
         <mat-form-field  appearance="outline">
           <mat-label>User Designation</mat-label>
-         <!-- <input matInput type="text" placeholder="User Role / Designation" value="Software Engineer"> -->
           <mat-select formControlName="role" placeholder="Role of Employee" >
             <ng-container *ngFor="let role of roles">
               <mat-option value="{{role.id}}">{{role.value}}</mat-option>
@@ -51,12 +50,12 @@
        
         <mat-form-field  appearance="outline">
             <mat-label>Birth Date (DOB)</mat-label>
-            <input matInput type="date" placeholder="Date of Birth" formControlName="dob"/>
+            <input matInput type="date" placeholder="Date of Birth" [value]="ud.dob"/>
           </mat-form-field><br>
         
         <mat-form-field  appearance="outline">
             <mat-label>Joining Date (DOJ)</mat-label>
-            <input matInput type="date" placeholder="Date of Joining" formControlName="doj"/>
+            <input matInput type="date" placeholder="Date of Joining" [value]="ud.doj"/>
             <mat-error *ngIf="doj?.errors?.['required']">
               DOJ is required
             </mat-error>
@@ -131,7 +130,7 @@
             />
             </mat-label>  
             <br/>          
-            <div *ngIf="fb != null"><img [src]="fb" style="border: 3px solid black;border-radius:6px;height: 20%; width:20%"></div>
+            <div *ngIf="ud.photoURL != ''"><img [src]="ud.photoURL" style="border: 3px solid black;border-radius:6px;height: 20%; width:20%"></div>
         </section>
   
         <button mat-button class="btn btn-info fw-normal" type="submit">Submit</button>
