--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -87,85 +87,12 @@
   >
   </mwl-calendar-day-view>
 </div>
-
 <br /><br /><br />
 
 
 
 
-
-
-
-<!-- <h3>
-  Edit events
-  <button class="btn btn-primary float-right" (click)="addEvent()">
-    Add new
-  </button>
-  <div class="clearfix"></div>
-</h3>
-<div class="table-responsive">
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Starts at</th>
-      <th>Ends at</th>
-      <th colspan="2">Action</th> 
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let event of eventsList" >
-      <td><input
-        type="text"
-        class="form-control"
-        [(ngModel)]="event.id"         
-      /></td>
-      <td>
-        <input
-          type="text"
-          class="form-control"
-          [(ngModel)]="event.title"         
-        />
-      </td>
-      <td>
-        <input            
-        class="form-control"
-        type="text" name="startdate"
-        [(ngModel)]="event.start"       
-      
-      /> 
-      </td>
-      <td>
-        <input            
-        class="form-control"
-        type="text" name="startdate"
-        mwlFlatpickr
-            [(ngModel)]="event.end"
-            (ngModelChange)="refresh.next()"
-            [altInput]="true"
-            [convertModelValue]="true"
-            [enableTime]="true"
-            dateFormat="Y-m-dTH:i"
-            altFormat="F j, Y H:i"
-            placeholder="Not set"
-      /> 
-      </td>
-    <td>  <button class="btn btn-danger" (click)="delete(event.id)">Delete</button></td>
-      
-      <!-- <td><button class="btn btn-danger" (click)="deleteEvent(event)">Delete</button></td> -->
-      <!-- <td><button class="btn btn-danger"  (click)="deleteBook(i, element)">Delete</button></td> -->
-      <!-- <td><button class="btn btn-primary active" (click)="saveEvents(event)">Save</button></td>
-  </tbody>
-</table>
-</div> -->
-
-
- 
-
-
-
-
+<!-- Calendar Events -->
 <h3>
   Edit events 
   <button class="btn btn-primary float-right" (click)="addEvent()">
@@ -236,125 +163,3 @@
 
 
 
-<!-- <h3>
-  Edit events
-  <button class="btn btn-primary float-right" (click)="addEvent()">
-    Add new
-  </button>
-  <div class="clearfix"></div>
-</h3> -->
-
-<!-- <div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Starts at</th>
-        <th>Ends at</th>
-        <th colspan="2">Action</th>        
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr *ngFor="let event of events" >
-        <td>
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="event.title"
-            (keyup)="refresh.next()"
-          />
-        </td>
-        
-        
-        <td>
-          
-          <p>     </p>
-          <input
-            
-            class="form-control"
-            type="text" name="startdate"
-            [(ngModel)]="event.start"
-            (keyup)="refresh.next()"
-          /> -->
-
-
-
-          
-          <!-- <input
-            class="form-control"
-            type="text"
-            mwlFlatpickr
-            [(ngModel)]="event.title"
-            (ngModelChange)="refresh.next()"
-            [altInput]="true"
-            [convertModelValue]="true"
-            [enableTime]="true"
-            dateFormat="Y-m-dTH:i"
-            altFormat="F j, Y H:i"
-            placeholder="Not set"
-          /> -->
-
-          
-        <!-- </td>
-        <td>
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="event.end"
-            (keyup)="refresh.next()"
-          /> -->
-          <!-- <input
-            class="form-control"
-            type="text"
-            mwlFlatpickr
-            [(ngModel)]="event.title"
-            (ngModelChange)="refresh.next()"
-            [altInput]="true"
-            [convertModelValue]="true"
-            [enableTime]="true"
-            dateFormat="Y-m-dTH:i"
-            altFormat="F j, Y H:i"
-            placeholder="Not set"
-          /> -->
-        <!-- </td>
-        <td>
-          <button class="btn btn-danger" (click)="deleteEvent(event)" >
-            Delete
-          </button>
-
-         
-
-
-        </td>
-        <td>
-          <button class="btn btn-primary active" (click)="saveEvents(event)">
-            Save
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
-
-
-
-
-
-
-
-<!-- <div> <button class="badge badge-danger mr-2" (click)="deleteTutorial()">
-  Delete
-</button></div> -->
-
- <!-- <div>{{ events1.start | date:'dd/MM/yyyy' }}</div>  -->
- <!-- <div>{{ events1.start?.toDate() | date}}</div> -->
-
-  <!-- <td>{{event.title}}</td>
-      <td>{{event.start}}</td>
-      <td>{{event.end}}</td> -->
-      <!-- <td>{{event.id}}</td> -->
- <!-- <div>{{eventsList.title}}</div>   -->
- <!-- <div>{{eventsList.start}}</div> 
- <div>{{eventsList.end}}</div>  --> 
- 
