--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -11,23 +11,23 @@
           <!-- Id Column -->
           <ng-container matColumnDef="uid">
             <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.firstName}} </td>
+            <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.userId}} </td>
           </ng-container>
   
           <!-- Assigned Column -->
           <ng-container matColumnDef="assigned">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <th mat-header-cell *matHeaderCellDef> Name </th>
             <td mat-cell *matCellDef="let element">
-              <p class="mb-0 fw-medium">{{ element.email }}</p>
+              <p class="mb-0 fw-medium">{{ element.firstName }}</p>
               <p class="mb-0 fw-normal op-5">{{ element.work }}</p>
             </td>
           </ng-container>
   
           <!-- Project Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Project </th>
+            <th mat-header-cell *matHeaderCellDef> email </th>
             <td mat-cell *matCellDef="let element">
-              <p class="mb-0 fw-medium op-5">{{element.name}}</p>
+              <p class="mb-0 fw-medium op-5">{{element.email}}</p>
             </td>
           </ng-container>
   
