--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -93,6 +93,7 @@
 
 
 <!-- Calendar Events -->
+<div *ngIf="isAdmin">
 <h3>
   Edit events 
   <button class="btn btn-primary float-right" (click)="addEvent()">
@@ -157,6 +158,7 @@
     </tr>
   </tbody>
 </table>
+</div>
 </div>
 <div>{{eventsList.title}}</div>  
 
