--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -10,7 +10,7 @@
           
           <!-- Id Column -->
           <ng-container matColumnDef="uid">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef> ID </th>
             <td mat-cell class="fw-medium" *matCellDef="let element"> {{element.userId}} </td>
           </ng-container>
   
@@ -25,25 +25,25 @@
   
           <!-- Project Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> email </th>
+            <th mat-header-cell *matHeaderCellDef> Position </th>
             <td mat-cell *matCellDef="let element">
-              <p class="mb-0 fw-medium op-5">{{element.email}}</p>
+              <p class="mb-0 fw-medium op-5">{{element.role}}</p>
             </td>
           </ng-container>
   
-          <!-- Priority Column -->
+          <!-- Priority Column 
           <ng-container matColumnDef="priority">
             <th mat-header-cell *matHeaderCellDef> Status </th>
             <td mat-cell *matCellDef="let element">
-              <span class="badge {{element.badge}} rounded-pill">{{element.priority}}</span>
+              <span class="badge {{element.badge}} rounded-pill">{{element.project}}</span>
             </td>
-          </ng-container>
+          </ng-container> -->
   
           <!-- doj Column -->
           <ng-container matColumnDef="doj">
-            <th mat-header-cell *matHeaderCellDef> Date of Joining </th>
+            <th mat-header-cell *matHeaderCellDef> Project </th>
             <td mat-cell *matCellDef="let element">
-              <p class="mb-0 fw-medium">{{element.doj}}</p>
+              <p class="mb-0 fw-medium">{{element.project}}</p>
             </td>
           </ng-container>
 
