--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -4,64 +4,72 @@
       <h4 class="mb-32">View / Edit User</h4>
       <button mat-raised-button class="mb-16 btn btn-info" color="accent" (click)="onEdit()">Edit</button>
       
-      <form [formGroup]="userService.form">
+      <form [formGroup]="resetformone">
 
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Employee ID</mat-label>
-          <input matInput type="text" value="User" placeholder="Employee ID" [value]="userService.selectedUser.userId" readonly>
+          <input matInput type="text" value="User" placeholder="Employee ID" formControlName="userId" readonly>
         </mat-form-field>
         
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>First Name</mat-label>
-          <input matInput type="text" value="User" placeholder="Enter user's first name" [value]="userService.selectedUser.firstName" [readonly]="isAdminEdit">
+          <input matInput type="text" value="User" placeholder="Enter user's first name" formControlName="firstName" [readonly]="!isEdit" >
         </mat-form-field>
         
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Last Name</mat-label>
-          <input matInput type="text" value="User" placeholder="Enter user's last name" [value]="userService.selectedUser.lastName" [readonly]="!isAdminEdit">
+          <input matInput type="text" value="User" placeholder="Enter user's last name" formControlName="lastName" [readonly]="!isEdit">
         </mat-form-field>
         
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Date of Birth</mat-label>
-          <input matInput type="date" placeholder="Date of Birth" [value]="userService.selectedUser.dob" [readonly]="!isEdit">
+          <input matInput type="date" placeholder="Date of Birth" formControlName="dob" [readonly]="!isEdit">
         </mat-form-field>
 
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Contact Number</mat-label>
-          <input matInput type="email" placeholder="Enter Contact Number" [value]="userService.selectedUser.phone" [readonly]="!isEdit">
+          <input matInput type="email" placeholder="Enter Contact Number" formControlName="phone" [readonly]="!isEdit">
         </mat-form-field>
   
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Personal Mail</mat-label>
-          <input matInput type="email" placeholder="Enter user's personal email"  [value]="userService.selectedUser.email" [readonly]="!isEdit">
+          <input matInput type="email" placeholder="Enter user's personal email"  formControlName="email" [readonly]="!isEdit" readonly>
         </mat-form-field>
         
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Official Mail</mat-label>
-          <input matInput type="email" placeholder="Enter company email"   [value]="userService.selectedUser.officeEmail" [readonly]="!isEdit">
+          <input matInput type="email" placeholder="Enter company email"   formControlName="officeEmail" [readonly]="!isEdit">
         </mat-form-field>
         
         <mat-form-field class="w-100 fs-16" appearance="outline">
             <mat-label>Date of Joining</mat-label>
-            <input matInput  type="date" placeholder="Date of Joining" [value]="userService.selectedUser.doj" [readonly]="!isEdit">
+            <input matInput  type="date" placeholder="Date of Joining" formControlName="doj" [readonly]="!isEdit">
           </mat-form-field>
 
           <mat-form-field class="w-100 fs-16" appearance="outline">
               <mat-label>Designation</mat-label>
-              <input matInput type="text" placeholder="User Designation">
+              <input matInput type="text" placeholder="User Designation" formControlName="role" >
             </mat-form-field>            
 
           <mat-form-field class="w-100 fs-16" appearance="outline">
             <mat-label>Project</mat-label>
-            <input matInput type="text" placeholder="Project"  [value]="userService.selectedUser.project">
+            <input matInput type="text" placeholder="Project"  formControlName="project">
           </mat-form-field>          
   
         <mat-form-field class="w-100 fs-16" appearance="outline">
           <mat-label>Address for Communication</mat-label>
-          <textarea matInput [readonly]="!isEdit" rows="5" placeholder="Address for Communication" [value]="userService.selectedUser.address"></textarea>
+          <textarea matInput [readonly]="!isEdit" rows="5" placeholder="Address for Communication" formControlName="address"></textarea>
+        </mat-form-field>
+        
+
+        <mat-form-field class="w-100 fs-16" appearance="outline">
+          <mat-label>skill set</mat-label>
+          <textarea matInput [readonly]="!isEdit" rows="5" placeholder="Address for Communication" formControlName="skillSet"></textarea>
         </mat-form-field>
 
-        <mat-form-field class="w-100 fs-16 demo-chip-list">
+        
+
+        <!-- <mat-form-field class="w-100 fs-16 demo-chip-list">
           <mat-label>Skill Set</mat-label>
           <mat-chip-list #chipList>
             <mat-chip *ngFor="let skill of userSkillSet" [selectable]="selectable" [removable]="removable"
@@ -71,18 +79,18 @@
             </mat-chip>
             <input placeholder="Add new Skill Set..." [matChipInputFor]="chipList"
               [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-              (matChipInputTokenEnd)="add($event)" [value]="userService.selectedUser.skillSet" />
+              (matChipInputTokenEnd)="add($event)" formControlName="skillSet" />
           </mat-chip-list>
-        </mat-form-field>
+        </mat-form-field> -->
         
         <section class="fs-16 mb-16">
             <mat-label>Uploaded Photos / Documents</mat-label>    
             <div *ngIf="photoURL != null"><img [src]="photoURL" style="border: 3px solid black;border-radius:6px;height: 20%; width:20%"></div>         
         </section>
           
-        <button *ngIf="isEdit" mat-raised-button class="mb-16 btn btn-info" (click)="updateUser()">Update User Details</button>
+        <button *ngIf="isEdit" mat-raised-button class="mb-16 btn btn-info" (click)="updateeditUser()">Update User Details</button>
         &nbsp;
-        <!-- <button mat-raised-button right class="me-8 mb-8" color="warn">Delete User</button> -->
+         <button mat-raised-button right class="me-8 mb-8" color="warn" (click)="deleteUser()">Delete User</button> 
 
       </form>
     </div>
